--- a/.env
+++ b/.env
@@ -47,5 +47,5 @@ MERCURE_URL=https://localhost/.well-known/mercure
 # The public URL of the Mercure hub, used by the browser to connect
 MERCURE_PUBLIC_URL=https://localhost/.well-known/mercure
 # The secret used to sign the JWTs
-MERCURE_JWT_SECRET="!ChangeMe!"
+MERCURE_JWT_SECRET="!ChangeThisMercureHubJWTSecretKey!"
 ###< symfony/mercure-bundle ###
